Use MetalPetal filters unless Apple Log is selected.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -42470,6 +42470,7 @@
       }
     },
     "MetalPetal filters" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
