Use SetInputSettings to fix OBS input.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -29079,6 +29079,9 @@
         }
       }
     },
+    "Failed to fix OBS input" : {
+
+    },
     "Failed to get 7TV channel emotes" : {
       "localizations" : {
         "de" : {
