Make stream settings easier to understand.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -17119,6 +17119,9 @@
         }
       }
     },
+    "Chat and viewers" : {
+
+    },
     "Chat is empty." : {
       "localizations" : {
         "de" : {
@@ -42217,6 +42220,9 @@
           }
         }
       }
+    },
+    "Media" : {
+
     },
     "Message" : {
       "localizations" : {
